@@ -225,6 +225,7 @@ Pierre-Yves David
 Scott David Daniels
 Ben Darnell
 Jonathan Dasteel
+Xavier de Gaye
 John DeGood
 Ned Deily
 Vincent Delft
